--- a/index.html
+++ b/index.html
@@ -5,10 +5,87 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Collega html al CSS -->
     <link rel="stylesheet" href="dist/app.css">
+    <!-- Collega html e FONT-AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+    <!-- Collega i FONTS DI GOOGLE all'html -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
     
+    <!-- INIZIO HEADER -->
+    <header>
+        <div class="container">
+
+            <!-- INIZIO NAV -->
+            <nav>
+    
+                <!-- inizio LOGO -->
+                <div class="logo">
+                    <img src="img/logo.svg" alt="logo">
+                </div>
+
+                <!-- inizio MENU A TENDINA -->
+                <div class="menu">
+                    <ul class="menu_tendina">
+
+                        <li>
+                            <a href="#">Solutions</a>
+                        </li>
+                        <li>
+                            <a href="#">Pricing</a> 
+                        </li>
+                        <li> 
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#"> Sign in</a>
+                        </li>
+                        <li>
+                            <button>
+                                <img src="img/google-logo.svg" alt="">
+                                <a href="#">Sign up</a> 
+                            </button>
+                        </li>
+
+                    </ul>
+                </div>
+
+                <!-- inizio BURGER MENU -->
+                <div class="burger_menu">
+                    <i class="fas fa-bars"></i>
+                </div>
+
+            </nav>
+            <!-- FINE NAV -->
+
+            <!-- INIZIO JUMBOTRON -->
+            <div class="jumbotron">
+
+                <div class="motto-jumbotron">
+                    <h1>Understand, recognize and develop your people</h1>
+                    <div>Teambit helps teams create a high performing culture with regular feedback.</div>
+                </div>
+                <div class="sfondo-jumbotron">
+                    <img src="img/illustration-main.jpg" alt="">
+                </div>
+
+            </div>
+            <!-- FINE JUMBOTRON -->
+
+
+        </div>
+    </header>
+    <!-- FINE HEADER -->
+
+    <!-- INIZIO MAIN -->
+    <!-- FINE MAIN -->
+
+    <!-- INIZIO FOOTER -->
+    <!-- FINE FOOTER -->
+
 </body>
 </html>
