--- a/index.html
+++ b/index.html
@@ -68,10 +68,25 @@
                 <div class="motto-jumbotron">
                     <h1>Understand, recognize and develop your people</h1>
                     <div>Teambit helps teams create a high performing culture with regular feedback.</div>
+                    <div class="container-button-blue"> 
+                        <button class="button-blue">
+                            <img src="img/google-logo.svg" alt="logo-google">
+                            <a href="#">Sign up with Google</a> 
+                        </button>
+                        or
+                        <button class="button-blue">
+                            <img src="img/slack-logo.svg" alt="logo-slack">
+                            <a href="#">Sign up with Slack</a> 
+                        </button>
+                    </div>
+                    <div class="text-email">or use your email address</div>
+                    
                 </div>
+
                 <div class="sfondo-jumbotron">
                     <img src="img/illustration-main.jpg" alt="">
                 </div>
+
 
             </div>
             <!-- FINE JUMBOTRON -->
