main prima sezione

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <!-- INIZIO JUMBOTRON -->
             <div class="jumbotron">
 
+                <!-- JUMBOTRON di sinistra -->
                 <div class="motto-jumbotron">
                     <h1>Understand, recognize and develop your people</h1>
                     <div>Teambit helps teams create a high performing culture with regular feedback.</div>
@@ -83,6 +84,7 @@
                     
                 </div>
 
+                <!-- JUMBOTRON di destra -->
                 <div class="sfondo-jumbotron">
                     <img src="img/illustration-main.jpg" alt="">
                 </div>
@@ -97,6 +99,72 @@
     <!-- FINE HEADER -->
 
     <!-- INIZIO MAIN -->
+    <main>
+
+        <!-- INIZIO PRIMA SEZIONE -->
+        <section id="scopo">
+            <div class="container">
+
+                <div class="scopo-structure">
+                    <div class="align-center">
+                        <h3>Traditional people processes lead to disegnagement and turnover.</h3>
+                    </div>
+                    <div class="scopo-center">
+                        <div class="left">
+                            <img src="img/hardcore.png" alt="">
+                        </div>
+                        <div class="center">
+                            <img src="img/nofeedback.png" alt="">
+                        </div>
+                        <div class="right">
+                            <img src="img/notsafe.png" alt="">
+                        </div>
+                    </div>
+                    <div class="scopo-bottom">
+                        <img src="img/before.png" alt="">
+                    </div>
+                </div>
+
+                <div class="scopo-structure">
+                    <div class="align-center border-top">
+                        <h3>It doesn't have to be like that. Teambit is a modern solution that teammates love.</h3>
+                    </div>
+                    <div class="scopo-center">
+                        <div class="left">
+                            <img src="img/lightweight.png" alt="">
+                            <div>it's lighteeight fun and interconnected</div>
+                        </div>
+                        <div class="center">
+                            <img src="img/feedbacksuggestions.png" alt="">
+                            <div>It encourages regular feedback with contextual requests</div>
+                        </div>
+                        <div class="right scalata">
+                            <img src="img/safe.png" alt="">
+                            <div>It creates a safe environment for dialog</div>
+                        </div>
+                    </div>
+                    <div class="scopo-bottom">
+                        <img src="img/after.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- FINE PRIMA SEZIONE -->
+
+        <!-- INIZIO SECONDA SEZIONE -->
+        <section id="attivita">
+
+        </section>
+        <!-- FINE SECONDA SEZIONE -->
+
+        <!-- INIZIO TERZA SEZIONE -->
+        <section id="feedback">
+
+        </section>
+        <!-- FINE TERZA SEZIONE -->
+
+    </main>
     <!-- FINE MAIN -->
 
     <!-- INIZIO FOOTER -->
