seconda sezione main

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                     <div class="scopo-bottom">
                         <img src="img/after.png" alt="">
                     </div>
+                    <div class="align-center">
+                        <h3>Here is how it works</h3>
+                    </div>
                 </div>
 
             </div>
@@ -155,6 +158,23 @@
         <!-- INIZIO SECONDA SEZIONE -->
         <section id="attivita">
 
+            <div class="attivita-screen">
+                <img src="img/employee-feedback.jpg" alt="">
+            </div>
+            <div class="attivita-text">
+                <div class="title-attivita-text">
+                    <h5>Feedback to help teammates improve</h5>
+                </div>
+                <div class="articolo-attivita-text">
+                    Empower your teammates to know in real time what they are doing well and what they need to improve.
+                </div>
+                <div class="link-attivita-text">
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="img-attivita-text">
+                    <img src="img/communication.jpg" alt="">
+                </div>
+            </div>
         </section>
         <!-- FINE SECONDA SEZIONE -->
 
